--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_auth: ^5.4.2
   firebase_core: ^3.11.0
   cloud_firestore: ^5.6.6
+  provider: ^6.1.4
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
