Change the app name to thrivex

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: screens
-description: "A new Flutter project."
+name: thrivex
+description: "Thrive X is a mobile portfolio app designed to help students showcase their skills, experiences, and personal stories to potential employers, coaches, and recruiters. Built using Flutter and Firebase, the app allows users to create dynamic, professional profiles with sections like Projects, Work Experience, Certificates, and more. An integrated AI feature, powered by Google Gemini, generates tailored summaries to enhance profile presentation. The app was developed using Agile methodology, with a focus on student users and real-time data syncing through Firestore. Thrive X aims to bridge the gap between education and employment through modern, narrative-driven digital portfolios."
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
